2A/05_Projet_GL/src/test/deca/context/valid/complet/48_casting_float_int.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024

{
    float f = 1.2;
    int i =(int)(f);
}