2A/05_Projet_GL/src/test/deca/context/invalid/complet/38_return_int_float.deca
// Description :
//   return float au lieu un int 
// Resultats :
//    ligne 10 : le float ne peut pas être affecté à int
// Historique :
//  cree le 16/01/2024
class A {
    int x ; 
    float f ;

    int getX() {
        return f ; 
    }
}